--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!doctype html>
-<html lang="en" >
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta name="theme-color" content="#4F46E5" />
+    <meta name="description" content="Application de gestion de missions et lettres de mission" />
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="apple-touch-icon" href="/logo192.png" />
+    <title>Hoalen by Actioneo</title>
   </head>
   <body>
-    <div id="root" ></div>
+    <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
